--- a/SpringBootUpload_Angular/src/app/upload/list-upload/list-upload.component.html
+++ b/SpringBootUpload_Angular/src/app/upload/list-upload/list-upload.component.html
@@ -1,16 +1,14 @@
-<button class="button btn-info" *ngIf='showFile'
-	(click)='showFiles(false)'>Hide Files</button>
+<button class="button btn-info" *ngIf='showFile' (click)='showFiles(false)'>Hide Files</button>
 
-<button class="button btn-info" *ngIf='!showFile'
-	(click)='showFiles(true)'>Show Files</button>
+<button class="button btn-info" *ngIf='!showFile' (click)='showFiles(true)'>Show Files</button>
 
 <div [hidden]="!showFile">
-	<div class="panel panel-primary">
-		<div class="panel-heading">List of Files</div>
-		<div *ngFor="let file of fileUploads | async">
-			<div class="panel-body">
-				<details-upload [fileUpload]='file'></details-upload>
-			</div>
-		</div>
-	</div>
+  <div class="panel panel-primary">
+    <div class="panel-heading">List of Files</div>
+    <div *ngFor="let file of fileUploads | async">
+      <div class="panel-body">
+        <details-upload [fileUpload]='file'></details-upload>
+      </div>
+    </div>
+  </div>
 </div>
