--- a/20180430 - RESTFul/.settings/org.eclipse.wst.common.component
+++ b/20180430 - RESTFul/.settings/org.eclipse.wst.common.component
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="HelloWorld">
+    	
+    <wb-module deploy-name="Spring4Rest-0.0.1-SNAPSHOT">
+                
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
+        		
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
+        		
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
+        		
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <property name="context-root" value="HelloWorld"/>
-        <property name="java-output-path" value="/20180430 - RESTFul/target/classes"/>
+        		
+        <property name="java-output-path" value="target/classes"/>
+        <property name="context-root" value="Spring4Rest"/>
+        	
     </wb-module>
+    
 </project-modules>
