Spring Boot Rest API + Bootstrap 과제 완료 20180503

--- a/SpringBootJQueryBootstrap/src/main/resources/templates/index.html
+++ b/SpringBootJQueryBootstrap/src/main/resources/templates/index.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="EUC-KR">
-<title>Insert title here</title>
+<meta charset="utf-8" />
+<title>Spring Boot - DELETE-UPDATE AJAX Example</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="/js/jqueryAjaxGet.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
 </head>
 <body>
-
+	<div class="container">
+		<h1>Customer Table</h1>
+		<div class="row col-md-7 table-responsive">
+			<table id="customerTable" class="table table-bordered table-hover">
+				<thead>
+					<tr>
+						<th>Id</th>
+						<th>Name</th>
+						<th>Age</th>
+						<th>Street</th>
+						<th>Postcode</th>
+					</tr>
+				</thead>
+				<tbody>
+				</tbody>
+			</table>
+		</div>
+	</div>
 </body>
 </html>
