--- a/20180528 - SpringSecurity/src/main/resources/templates/about.html
+++ b/20180528 - SpringSecurity/src/main/resources/templates/about.html
@@ -1,6 +1,8 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
+	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <div th:replace="fragments/header :: header-css"/>
 </head>
 <body>
@@ -17,6 +19,5 @@
 <!-- /.container -->
 
 <div th:replace="fragments/footer :: footer"/>
-
 </body>
 </html>
