--- a/20180528 - SpringSecurity/src/main/resources/templates/login.html
+++ b/20180528 - SpringSecurity/src/main/resources/templates/login.html
@@ -29,17 +29,15 @@
                     </div>
 
                     <div class="form-group">
-                        <input type="text" name="username" id="username" class="form-control input-lg"
-                               placeholder="UserName" required="true" autofocus="true"/>
+                        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="UserName" required="true" autofocus="true">
                     </div>
                     <div class="form-group">
-                        <input type="password" name="password" id="password" class="form-control input-lg"
-                               placeholder="Password" required="true"/>
+                    	<input type="text" class="form-control" id="formGroupExampleInput" placeholder="Password" required="true" autofocus="true">
                     </div>
 
                     <div class="row">
                         <div class="col-xs-6 col-sm-6 col-md-6">
-                            <input type="submit" class="btn btn-lg btn-primary btn-block" value="Sign In"/>
+                            <button class="btn btn-primary" type="submit">Sign In</button>
                         </div>
                         <div class="col-xs-6 col-sm-6 col-md-6">
                         </div>
@@ -52,6 +50,5 @@
 </div>
 
 <div th:replace="fragments/footer :: footer"></div>
-
 </body>
 </html>
